--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,44 @@
     <string name="projects">项目</string>
     <string name="team">团队</string>
     <string name="mine">个人中心</string>
+    <string-array name="list">
+        <item>animated</item>
+        <item>attachments</item>
+        <item>debuts</item>
+        <item>playoffs</item>
+        <item>rebounds</item>
+        <item>teams</item>
+    </string-array>
+    <string-array name="timeframe">
+        <item>week</item>
+        <item>month</item>
+        <item>year</item>
+        <item>ever</item>
+    </string-array>
+    <string-array name="sort">
+        <item>recent</item>
+        <item>comments</item>
+        <item>views</item>
+    </string-array>
+    <string-array name="listZH">
+        <item>动画</item>
+        <item>带附件</item>
+        <item>首秀</item>
+        <item>每季精品</item>
+        <item>再创作</item>
+        <item>团队作品</item>
+    </string-array>
+    <string-array name="timeframeZH">
+        <item>一周内</item>
+        <item>一个月内</item>
+        <item>一年内</item>
+        <item>时间不限</item>
+    </string-array>
+    <string-array name="sortZH">
+        <item>最新</item>
+        <item>评论最多</item>
+        <item>浏览最多</item>
+    </string-array>
+
+
 </resources>
