--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,9 @@
     <string name="title_activity_comment">CommentActivity</string>
     <string name="comment">评论</string>
     <string name="share">分享</string>
+    <string name="title_activity_user_info">UserInfoActivity</string>
+    <string name="follow">关注</string>
+    <string name="unfollow">取消关注</string>
 
 
 </resources>
